--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication"
+        android:theme="@style/Theme.MyApplication."
         tools:targetApi="31">
         <activity
-            android:name="com.example.carrotmarket.MainActivity"
+            android:name=".Alert_info_activity"
+            android:exported="false" />
+        <activity
+            android:name=".fragment_alert"
+            android:exported="false" />
+        <activity
+            android:name=".Stuff_info_activity"
+            android:exported="false" />
+        <activity
+            android:name=".Stuff_infoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
